fix alignment

--- a/packages/bpk-component-breadcrumb/src/BpkBreadcrumbItem.module.scss
+++ b/packages/bpk-component-breadcrumb/src/BpkBreadcrumbItem.module.scss
@@ -34,7 +34,7 @@
 
   &__arrow {
     margin: 0 tokens.bpk-spacing-sm();
-    line-height: tokens.$bpk-line-height-xs;
+    line-height: tokens.$bpk-line-height-lg;
     fill: tokens.$bpk-text-disabled-day;
   }
 }
